templates/pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  namespace: default
spec:
  containers:
  - name: alpine
    image: alpine
    command:
      - env
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
