templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: testing
spec:
   ingress:
     - from:
         - podSelector:
             matchLabels:
               app: alpine
       ports:
         - port: 80
           protocol: TCP
   podSelector:
      matchLabels:
        app: nginx
   policyTypes:
     - Ingress
